Fixed most animations. SVG Ticks now work on webkit (according to the tester). The resize handles are invisible in the test build, so I will have to push and try directly on safari. However, the stroke animation has been calmed down a bit in terms of values.

--- a/frontend/styles/app.css
+++ b/frontend/styles/app.css
@@ -200,7 +200,7 @@ a {
 
 .icon-button {
     cursor: pointer;
-    transition-timing-function: var(--bezier-function);
+    transition-timing-function: ease;
     transition-duration: var(--quick-transition-time);
     transition-property: transform, background, box-shadow, width, height, padding, filter, top, right, left, bottom;
 }
